# healthapp

./: Dentist_in_Kottayam.txt  cancer.txt  checker.py  covid.py  covid_graphic.py  covid_visualizer.py  disease.py  drugs.py  first_aid.py  googlesearch.py  gui_main.py  guimain.py  jaundice.txt  practo.py  pyproject.toml  requirements.txt  searchxy.py  searchxy2.py  searchxy3.py  wiki.py
